plugins {
    id 'java'
}

group 'page.devnet'

ext {
    junitVersion = '5.8.1'
    lombokVersion = '1.18.34'
    logbackVersion = '1.5.18'
    vertxVersion = '4.5.1'
}

allprojects {
    plugins.withType(JavaPlugin) {
        targetCompatibility = 21
        sourceCompatibility = 21

        tasks.withType(JavaCompile) {
            options.encoding = 'UTF-8'
        }

        repositories {
            mavenLocal()
            mavenCentral()
        }
    }
}


subprojects {
    plugins.withType(JavaPlugin) {
        group "${project.rootProject.group}.${project.name}"

        // common dependencies
        dependencies {
            implementation("ch.qos.logback:logback-classic:1.5.18")

            testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
            testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"

            implementation "org.projectlombok:lombok:$lombokVersion"
            annotationProcessor "org.projectlombok:lombok:$lombokVersion"
        }

        test {
            useJUnitPlatform()
        }
    }

    plugins.withType(ApplicationPlugin) {
        plugins.withId("com.github.johnrengelman.shadow") {
            shadowJar {
                destinationDirectory = new File("${project.rootProject.projectDir}/bin")
                archiveClassifier = ''
                archiveVersion = ''
            }
        }
    }
}
